# all-repos-envvar

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  renovate.json  setup.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  poetry-upgrade.yml  upgrader.yml
src/all_repos_envvar/: mixin.py  push.py  source.py
templates/: .changelog-old.md
tests/: test_main.py  test_push.py  test_source.py
